@@ -1,6 +1,4 @@
 /*
- * $Id$
- *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,29 +16,39 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.struts2.components;
 
-import com.opensymphony.xwork2.inject.Inject;
-import com.opensymphony.xwork2.util.ValueStack;
+import org.apache.struts2.inject.Inject;
+import org.apache.struts2.util.ValueStack;
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.WriteListener;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.struts2.RequestUtils;
 import org.apache.struts2.StrutsConstants;
+import org.apache.struts2.StrutsException;
 import org.apache.struts2.util.FastByteArrayOutputStream;
 import org.apache.struts2.views.annotations.StrutsTag;
 import org.apache.struts2.views.annotations.StrutsTagAttribute;
 
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletException;
-import javax.servlet.ServletOutputStream;
-import javax.servlet.ServletRequest;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpServletResponseWrapper;
-import java.io.*;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.io.Writer;
 import java.net.URLEncoder;
-import java.util.*;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Stack;
+import java.util.StringTokenizer;
 
 /**
  * <!-- START SNIPPET: javadoc -->
@@ -93,12 +101,13 @@ public class Include extends Component {
 
     private static final Logger LOG = LogManager.getLogger(Include.class);
 
-    private static String systemEncoding = System.getProperty("file.encoding");
+    private static final String SYSTEM_ENCODING = Charset.defaultCharset().displayName();
 
     protected String value;
-    private HttpServletRequest req;
-    private HttpServletResponse res;
-    private static String defaultEncoding;
+    private final HttpServletRequest req;
+    private final HttpServletResponse res;
+    private String defaultEncoding;       // Made non-static (during WW-4971 fix)
+    private boolean useResponseEncoding = true;  // Added with WW-4971 fix (allows switch between usage of response or default encoding)
 
     public Include(ValueStack stack, HttpServletRequest req, HttpServletResponse res) {
         super(stack);
@@ -111,22 +120,37 @@ public class Include extends Component {
         defaultEncoding = encoding;
     }
 
+    @Inject(value = StrutsConstants.STRUTS_TAG_INCLUDETAG_USERESPONSEENCODING, required=false)
+    public void setUseResponseEncoding(String useEncoding) {
+        useResponseEncoding = Boolean.parseBoolean(useEncoding);
+    }
+
     public boolean end(Writer writer, String body) {
         String page = findString(value, "value", "You must specify the URL to include. Example: /foo.jsp");
         StringBuilder urlBuf = new StringBuilder();
+        String encodingForInclude;
+
+        if (useResponseEncoding) {
+            encodingForInclude = res.getCharacterEncoding();  // Use response (page) encoding
+            if (encodingForInclude == null || encodingForInclude.isEmpty()) {
+                encodingForInclude = defaultEncoding;  // Revert to defaultEncoding when response (page) encoding is invalid
+            }
+        }
+        else {
+            encodingForInclude = defaultEncoding;  // Use default encoding (when useResponseEncoding is false)
+        }
 
         // Add URL
         urlBuf.append(page);
 
         // Add request parameters
-        if (parameters.size() > 0) {
+        if (!attributes.isEmpty()) {
             urlBuf.append('?');
 
             String concat = "";
 
             // Set parameters
-            for (Object next : parameters.entrySet()) {
-                Map.Entry entry = (Map.Entry) next;
+            for (Map.Entry<String, Object> entry : attributes.entrySet()) {
                 Object name = entry.getKey();
                 List values = (List) entry.getValue();
 
@@ -135,11 +159,7 @@ public class Include extends Component {
                     urlBuf.append(name);
                     urlBuf.append('=');
 
-                    try {
-                        urlBuf.append(URLEncoder.encode(value.toString(), "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {
-                        LOG.warn("Unable to url-encode {}, it will be ignored", value);
-                    }
+                    urlBuf.append(URLEncoder.encode(value.toString(), StandardCharsets.UTF_8));
 
                     concat = "&";
                 }
@@ -150,7 +170,7 @@ public class Include extends Component {
 
         // Include
         try {
-            include(result, writer, req, res, defaultEncoding);
+            include(result, writer, req, res, encodingForInclude);
         } catch (ServletException | IOException e) {
             LOG.warn("Exception thrown during include of {}", result, e);
         }
@@ -168,11 +188,10 @@ public class Include extends Component {
 
         if (relativePath.startsWith("/")) {
             returnValue = relativePath;
-        } else if (!(request instanceof HttpServletRequest)) {
+        } else if (!(request instanceof HttpServletRequest hrequest)) {
             returnValue = relativePath;
         } else {
-            HttpServletRequest hrequest = (HttpServletRequest) request;
-            String uri = (String) request.getAttribute("javax.servlet.include.servlet_path");
+            String uri = (String) request.getAttribute(RequestDispatcher.INCLUDE_SERVLET_PATH);
 
             if (uri == null) {
                 uri = RequestUtils.getServletPath(hrequest);
@@ -184,7 +203,7 @@ public class Include extends Component {
         // .. is illegal in an absolute path according to the Servlet Spec and will cause
         // known problems on Orion application servers.
         if (returnValue.contains("..")) {
-            Stack stack = new Stack();
+            Stack<String> stack = new Stack<>();
             StringTokenizer pathParts = new StringTokenizer(returnValue.replace('\\', '/'), "/");
 
             while (pathParts.hasMoreTokens()) {
@@ -212,15 +231,15 @@ public class Include extends Component {
     }
 
     public void addParameter(String key, Object value) {
-        // don't use the default implementation of addParameter,
+        // Don't use the default implementation of addParameter,
         // instead, include tag requires that each parameter be a list of objects,
         // just like the HTTP servlet interfaces are (String[])
         if (value != null) {
-            List currentValues = (List) parameters.get(key);
+            List currentValues = (List) attributes.get(key);
 
             if (currentValues == null) {
                 currentValues = new ArrayList();
-                parameters.put(key, currentValues);
+                attributes.put(key, currentValues);
             }
 
             currentValues.add(value);
@@ -230,7 +249,7 @@ public class Include extends Component {
     /**
      * Include a resource in a response.
      *
-     * @param relativePath the relative path of the resource to include; resolves to {@link #getContextRelativePath(javax.servlet.ServletRequest,
+     * @param relativePath the relative path of the resource to include; resolves to {@link #getContextRelativePath(jakarta.servlet.ServletRequest,
      *                     String)}
      * @param writer       the Writer to write output to
      * @param request      the current request
@@ -259,8 +278,8 @@ public class Include extends Component {
             // Use given encoding
             pageResponse.getContent().writeTo(writer, encoding);
         } else {
-            //use the platform specific encoding
-            pageResponse.getContent().writeTo(writer, systemEncoding);
+            // Use the platform specific encoding
+            pageResponse.getContent().writeTo(writer, SYSTEM_ENCODING);
         }
     }
 
@@ -273,13 +292,26 @@ public class Include extends Component {
      */
     static final class PageOutputStream extends ServletOutputStream {
 
-        private FastByteArrayOutputStream buffer;
+        private final FastByteArrayOutputStream buffer;
 
 
         public PageOutputStream() {
             buffer = new FastByteArrayOutputStream();
         }
 
+        @Override
+        public boolean isReady() {
+            return true;
+        }
+
+        @Override
+        public void setWriteListener(WriteListener writeListener) {
+            try {
+                writeListener.onWritePossible();
+            } catch (IOException e) {
+                throw new StrutsException(e);
+            }
+        }
 
         /**
          * Return all data that has been written to this OutputStream.
@@ -290,22 +322,27 @@ public class Include extends Component {
             return buffer;
         }
 
+        @Override
         public void close() throws IOException {
             buffer.close();
         }
 
+        @Override
         public void flush() throws IOException {
             buffer.flush();
         }
 
+        @Override
         public void write(byte[] b, int o, int l) throws IOException {
             buffer.write(b, o, l);
         }
 
+        @Override
         public void write(int i) throws IOException {
             buffer.write(i);
         }
 
+        @Override
         public void write(byte[] b) throws IOException {
             buffer.write(b);
         }
@@ -332,8 +369,7 @@ public class Include extends Component {
      */
     static final class PageResponse extends HttpServletResponseWrapper {
 
-        protected PrintWriter pagePrintWriter;
-        protected ServletOutputStream outputStream;
+        private PrintWriter pagePrintWriter;
         private PageOutputStream pageOutputStream = null;
 
 
@@ -344,7 +380,6 @@ public class Include extends Component {
             super(response);
         }
 
-
         /**
          * Return the content buffered inside the {@link PageOutputStream}.
          *
@@ -352,9 +387,9 @@ public class Include extends Component {
          * @throws IOException
          */
         public FastByteArrayOutputStream getContent() throws IOException {
-            //if we are using a writer, we need to flush the
-            //data to the underlying outputstream.
-            //most containers do this - but it seems Jetty 4.0.5 doesn't
+            // If we are using a writer, we need to flush the
+            // data to the underlying outputstream.
+            // Most containers do this - but it seems Jetty 4.0.5 doesn't
             if (pagePrintWriter != null) {
                 pagePrintWriter.flush();
             }
@@ -366,6 +401,7 @@ public class Include extends Component {
          * Return instance of {@link PageOutputStream}
          * allowing all data written to stream to be stored in temporary buffer.
          */
+        @Override
         public ServletOutputStream getOutputStream() throws IOException {
             if (pageOutputStream == null) {
                 pageOutputStream = new PageOutputStream();
@@ -377,6 +413,7 @@ public class Include extends Component {
         /**
          * Return PrintWriter wrapper around PageOutputStream.
          */
+        @Override
         public PrintWriter getWriter() throws IOException {
             if (pagePrintWriter == null) {
                 pagePrintWriter = new PrintWriter(new OutputStreamWriter(getOutputStream(), getCharacterEncoding()));
