@@ -1,6 +1,4 @@
 /*
- * $Id$
- *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,36 +16,36 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.struts2.result;
 
-import com.opensymphony.xwork2.ActionContext;
-import com.opensymphony.xwork2.ActionInvocation;
-import com.opensymphony.xwork2.config.entities.ResultConfig;
-import com.opensymphony.xwork2.inject.Inject;
-import com.opensymphony.xwork2.util.reflection.ReflectionException;
-import com.opensymphony.xwork2.util.reflection.ReflectionExceptionHandler;
+import org.apache.struts2.ActionContext;
+import org.apache.struts2.ActionInvocation;
+import org.apache.struts2.config.entities.ResultConfig;
+import org.apache.struts2.inject.Inject;
+import org.apache.struts2.util.reflection.ReflectionException;
+import org.apache.struts2.util.reflection.ReflectionExceptionHandler;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.struts2.ServletActionContext;
 import org.apache.struts2.dispatcher.Dispatcher;
 import org.apache.struts2.dispatcher.mapper.ActionMapper;
 import org.apache.struts2.dispatcher.mapper.ActionMapping;
-import org.apache.struts2.views.util.UrlHelper;
+import org.apache.struts2.url.QueryStringBuilder;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.io.Serial;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
-import java.util.*;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
-import static javax.servlet.http.HttpServletResponse.SC_FOUND;
+import static jakarta.servlet.http.HttpServletResponse.SC_FOUND;
 
 /**
- * <!-- START SNIPPET: description -->
- * <p>
  * Calls the {@link HttpServletResponse#sendRedirect(String) sendRedirect}
  * method to the location specified. The response is told to redirect the
  * browser to the specified location (a new request from the client). The
@@ -56,33 +54,19 @@ import static javax.servlet.http.HttpServletResponse.SC_FOUND;
  * available. This is because actions are built on a single-thread model. The
  * only way to pass data is through the session or with web parameters
  * (url?name=value) which can be OGNL expressions.
- * </p>
- * <!-- END SNIPPET: description -->
  * <p>
  * <b>This result type takes the following parameters:</b>
- * </p>
- * <!-- START SNIPPET: params -->
- * 
+ *
  * <ul>
- * 
  * <li><b>location (default)</b> - the location to go to after execution.</li>
- * 
  * <li><b>parse</b> - true by default. If set to false, the location param will
  * not be parsed for Ognl expressions.</li>
- * 
- * <li><b>anchor</b> - Optional.  Also known as "fragment" or colloquially as 
+ * <li><b>anchor</b> - Optional.  Also known as "fragment" or colloquially as
  * "hash".  You can specify an anchor for a result.</li>
  * </ul>
- * 
- * <p>
  * This result follows the same rules from {@link StrutsResultSupport}.
- * </p>
- * 
- * <!-- END SNIPPET: params -->
  * <p>
  * <b>Example:</b>
- * </p>
- *
  * <pre>
  * <!-- START SNIPPET: example -->
  * &lt;!--
@@ -96,10 +80,10 @@ import static javax.servlet.http.HttpServletResponse.SC_FOUND;
  * &lt;/result&gt;
  * <!-- END SNIPPET: example -->
  * </pre>
- * 
  */
-public class ServletRedirectResult extends StrutsResultSupport implements ReflectionExceptionHandler {
+public class ServletRedirectResult extends StrutsResultSupport implements ReflectionExceptionHandler, Redirectable {
 
+    @Serial
     private static final long serialVersionUID = 6316947346435301270L;
 
     private static final Logger LOG = LogManager.getLogger(ServletRedirectResult.class);
@@ -111,7 +95,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     protected Map<String, Object> requestParameters = new LinkedHashMap<>();
     protected String anchor;
 
-    private UrlHelper urlHelper;
+    private QueryStringBuilder queryStringBuilder;
 
     public ServletRedirectResult() {
         super();
@@ -132,8 +116,8 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     }
 
     @Inject
-    public void setUrlHelper(UrlHelper urlHelper) {
-        this.urlHelper = urlHelper;
+    public void setQueryStringBuilder(QueryStringBuilder queryStringBuilder) {
+        this.queryStringBuilder = queryStringBuilder;
     }
 
     public void setStatusCode(int code) {
@@ -142,7 +126,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
 
     /**
      * Set the optional anchor value.
-     * 
+     *
      * @param anchor the anchor value
      */
     public void setAnchor(String anchor) {
@@ -152,7 +136,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     /**
      * Sets whether or not to prepend the servlet context path to the redirected
      * URL.
-     * 
+     *
      * @param prependServletContext <tt>true</tt> to prepend the location with the servlet context path, <tt>false</tt> otherwise.
      */
     public void setPrependServletContext(boolean prependServletContext) {
@@ -160,6 +144,10 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     }
 
     public void execute(ActionInvocation invocation) throws Exception {
+        if (invocation == null) {
+            throw new IllegalArgumentException("Invocation cannot be null!");
+        }
+
         if (anchor != null) {
             anchor = conditionalParse(anchor, invocation);
         }
@@ -169,15 +157,15 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     /**
      * Redirects to the location specified by calling
      * {@link HttpServletResponse#sendRedirect(String)}.
-     * 
+     *
      * @param finalLocation the location to redirect to.
-     * @param invocation an encapsulation of the action execution state.
+     * @param invocation    an encapsulation of the action execution state.
      * @throws Exception if an error occurs when redirecting.
      */
     protected void doExecute(String finalLocation, ActionInvocation invocation) throws Exception {
         ActionContext ctx = invocation.getInvocationContext();
-        HttpServletRequest request = (HttpServletRequest) ctx.get(ServletActionContext.HTTP_REQUEST);
-        HttpServletResponse response = (HttpServletResponse) ctx.get(ServletActionContext.HTTP_RESPONSE);
+        HttpServletRequest request = ctx.getServletRequest();
+        HttpServletResponse response = ctx.getServletResponse();
 
         if (isPathUrl(finalLocation)) {
             if (!finalLocation.startsWith("/")) {
@@ -187,7 +175,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
                     namespace = mapping.getNamespace();
                 }
 
-                if ((namespace != null) && (namespace.length() > 0) && (!"/".equals(namespace))) {
+                if (namespace != null && !namespace.isEmpty() && !"/".equals(namespace)) {
                     finalLocation = namespace + "/" + finalLocation;
                 } else {
                     finalLocation = "/" + finalLocation;
@@ -195,7 +183,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
             }
 
             // if the URL's are relative to the servlet context, append the servlet context path
-            if (prependServletContext && (request.getContextPath() != null) && (request.getContextPath().length() > 0)) {
+            if (prependServletContext && request.getContextPath() != null && !request.getContextPath().isEmpty()) {
                 finalLocation = request.getContextPath() + finalLocation;
             }
         }
@@ -215,7 +203,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
         }
 
         StringBuilder tmpLocation = new StringBuilder(finalLocation);
-        urlHelper.buildParametersString(requestParameters, tmpLocation, "&");
+        queryStringBuilder.build(requestParameters, tmpLocation, "&");
 
         // add the anchor
         if (anchor != null) {
@@ -230,36 +218,47 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
     }
 
     protected List<String> getProhibitedResultParams() {
-        return Arrays.asList(
-                DEFAULT_PARAM,
-                "namespace",
-                "method",
-                "encode",
-                "parse",
-                "location",
-                "prependServletContext",
-                "suppressEmptyParameters",
-                "anchor",
-                "statusCode"
+        return List.of(
+            DEFAULT_PARAM,
+            "namespace",
+            "method",
+            "encode",
+            "parse",
+            "location",
+            "prependServletContext",
+            "suppressEmptyParameters",
+            "anchor",
+            "statusCode"
         );
     }
 
     /**
      * Sends the redirection. Can be overridden to customize how the redirect is
      * handled (i.e. to use a different status code)
-     * 
-     * @param response The response
+     *
+     * @param response      The response
      * @param finalLocation The location URI
      * @throws IOException in case of IO errors
      */
     protected void sendRedirect(HttpServletResponse response, String finalLocation) throws IOException {
-        if (SC_FOUND == statusCode) {
-            response.sendRedirect(finalLocation);
-        } else {
-            response.setStatus(statusCode);
-            response.setHeader("Location", finalLocation);
-            response.getWriter().write(finalLocation);
-            response.getWriter().close();
+        try {
+            if (SC_FOUND == statusCode) {
+                response.sendRedirect(finalLocation);
+            } else {
+                response.setStatus(statusCode);
+                response.setHeader("Location", finalLocation);
+                try {
+                    response.getWriter().write(finalLocation);
+                } finally {
+                    response.getWriter().close();
+                }
+            }
+        } catch (IOException ioe) {
+            LOG.warn("Unable to redirect to: {}, code: {}; {}", finalLocation, statusCode, ioe);
+            throw ioe;  // Re-throw required to preserve existing default behaviour (no stacktrace in above warn for this reason)
+        } catch (IllegalStateException ise) {
+            LOG.warn("Unable to redirect to: {}, code: {}; isCommited: {}; {}", finalLocation, statusCode, response.isCommitted(), ise);
+            throw ise;  // Re-throw required to preserve existing default behaviour (no stacktrace in above warn for this reason)
         }
 
     }
@@ -274,7 +273,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
         try {
             String rawUrl = url;
             if (url.contains("?")) {
-                rawUrl = url.substring(0, url.indexOf("?"));
+                rawUrl = url.substring(0, url.indexOf('?'));
             }
             URI uri = URI.create(rawUrl.replaceAll(" ", "%20"));
             if (uri.isAbsolute()) {
@@ -285,10 +284,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
                 LOG.debug("[{}] isn't absolute URI, assuming it's a path", url);
                 return true;
             }
-        } catch (IllegalArgumentException e) {
-            LOG.debug("[{}] isn't a valid URL, assuming it's a path", url, e);
-            return true;
-        } catch (MalformedURLException e) {
+        } catch (IllegalArgumentException | MalformedURLException e) {
             LOG.debug("[{}] isn't a valid URL, assuming it's a path", url, e);
             return true;
         }
@@ -296,7 +292,7 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
 
     /**
      * Sets the suppressEmptyParameters option
-     * 
+     *
      * @param suppressEmptyParameters The new value for this option
      */
     public void setSuppressEmptyParameters(boolean suppressEmptyParameters) {
@@ -305,10 +301,9 @@ public class ServletRedirectResult extends StrutsResultSupport implements Reflec
 
     /**
      * Adds a request parameter to be added to the redirect url
-     * 
-     * @param key The parameter name
-     * @param value The parameter value
      *
+     * @param key   The parameter name
+     * @param value The parameter value
      * @return the servlet redirect result
      */
     public ServletRedirectResult addParameter(String key, Object value) {
